# PackBoost

./: .gitignore  AGENTS.md  EraSplitting.txt  Extra_Fast_Booster.ipynb  README.md  project.md  pyproject.toml  setup.cfg  setup.py  setup_native.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
examples/: hull_benchmark.py  synthetic_benchmark.py
notebooks/: numerai_gpu_demo.ipynb
packboost/: __init__.py  booster.py  config.py  data.py  des.py  gpu.py  model.py  predictor.py  wrapper.py
packboost/backends/: __init__.py  bindings.cpp
packboost/backends/cpu/: __init__.py  frontier_cpu.cpp
packboost/backends/cuda/: __init__.py  frontier_cuda.cu
packboost/backends/src/: backend.hpp  backend_cpu.cpp  backend_cuda.cu
packboost/core/: __init__.py  dataset.py  frontier.py  shards.py
packboost/utils/: binning.py
tests/: conftest.py  test_booster_small.py  test_config.py  test_des.py  test_execution_modes.py  test_model_flatten.py  test_packboost_parity.py  test_sklearn_wrapper.py
