[metadata]
name = packboost
version = 0.1.0
author = Pranshu Bahadur
description = Pack-parallel gradient boosting with Directional Era Splitting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pranshu-Bahadur/PackBoost
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    scikit-learn>=1.3
    pandas>=1.5
include_package_data = True

[options.extras_require]
cuda =

[options.package_data]
* = *.ipynb
